Several 'Timedout signaled job' in recent Xe KMD
With recent Xe KMD(3 weeks ago it did not happned) I'm seeing several Timedout signaled job
messages while running tests list that previously ran without any message, so I believe something regressed.
The below was reproduced in a TGL running crucible(Vulkan) test list but piglit(OpenGL) also reproduces the same:
[ 253.698544] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967170, guc_id=7, flags=0x0
[ 256.124698] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x0
[ 256.125614] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.125804] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.125911] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.126011] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.126111] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.126226] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.126346] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.126467] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.126577] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.126710] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.126822] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.126921] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.127019] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.127130] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.127242] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.127355] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.127472] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.127579] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.127698] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.127806] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.127914] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.128016] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.128120] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.128225] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.128340] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.128450] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 256.128556] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967173, guc_id=6, flags=0x1
[ 257.034674] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x0
[ 257.035053] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.035158] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.035323] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.035441] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.035536] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.035643] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.035759] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.035860] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.035953] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.036046] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.036141] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.036265] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.036362] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.036471] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.036571] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.036931] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037060] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037151] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037265] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037363] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037463] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037560] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037670] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037768] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037865] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.037960] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.038140] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1
[ 257.038238] xe 0000:00:02.0: [drm:guc_exec_queue_timedout_job [xe]] Timedout signaled job: seqno=4294967174, guc_id=5, flags=0x1